<resources>
    // strings del primer layout (principal)
    <string name="app_name">AmantePeliculas_252115</string>
    <string name="titulo">Toy Story</string>
    <string name="genero">Genero</string>
    <string name="accion">Accion</string>
    <string name="comedia">Comedia</string>
    <string name="fantasia">Fantasia</string>
    <string name="aventuras">Aventuras</string>
    <string name="rentar">Rentar</string>
    <string name="comprar">Comprar</string>
    <string name="calificacion">10/10</string>
    <string name="cantidad">713Mil</string>
    <string name="descripcion">Un vaquero se siente profundamente amenazado y celoso cuando un nuevo astronauta lo reemplaza como el mejor juguete en la habitación de un niño.</string>

    // string de la pantalla de login
    <string name="titulo_app">CINEMA LERMA</string>
    <string name="textoLogin">Iniciar sesion</string>
    <string name="textoCorreo">Correo</string>
    <string name="textoContrasena">Contraseña</string>
    <string name="textoRegistrar">¿No tienes cuenta? Regístrate</string>
    <string name="hintCorreo">correo@gmail.com</string>
    <string name="hintContrasena"> ******** </string>


</resources>